# lnotebook

./: .gitignore  Cargo.toml  README.md  justfile
.sqlx/: query-2737206accdc43ec5174ea8d37a46c6259d354eb32a1c6d0e6924e23c40823ff.json  query-cb3a1b8e37f9a4554290d511d7e031fa22d2a9180a6f22f0225eba391ca0e43f.json
lnotebook/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
lnotebook/.sqlx/: query-472337829a2498e407328dbfd26c743ab67b472fef33ed5eb9392269390fd2c6.json  query-70d22f86132b782b9d87b047061c6a9db0c16978f9858997536959e4da8ea53d.json  query-7ee85e218f2116391dc536ee86564f9ba1810e6b984eb3b88354997a5272d17a.json  query-b2229e783449870006fd655da93eda9383fdb58a11bcf4c4095fee2581784760.json  query-b69924afddd69d0e9d5e12704d73e205bbc973bc7a41fefb1fded04287850791.json  query-ce309a3e4104c3e9c1f048903d60758cc9ba64f39d2df9f4286992e0f1345eba.json
lnotebook/src/: commands.rs  errors.rs  lib.rs
lnotebook/src/commands/: execute_commands.rs
lnotebook_api/: Cargo.toml
lnotebook_api/src/: commands.rs  errors.rs  lib.rs
lnotebook_api/src/commands/: execute_commands.rs
notebook/: Cargo.toml  justfile
notebook/.sqlx/: query-8cf8a93b90ffb8c7702bccb97bbd99f65fde27128d7c5d2eac4c7d5be495402a.json
notebook/migrations/: 20240719130327_notebook.sql
notebook/src/: api.rs  main.rs
notebook/src/api/: commands.rs  errors.rs
notebook/src/api/commands/: execute_commands.rs
notebook/src/api/tests/: tests.rs
notebook_api/: .gitignore  Cargo.toml
notebook_api/migrations/: 20240719130327_notebook.sql
notebook_api/src/: commands.rs  errors.rs  lib.rs
notebook_api/src/commands/: execute_commands.rs
notebook_example/: Cargo.toml  justfile
notebook_example/src/: main.rs
notebook_main/: Cargo.toml
notebook_main/src/: main.rs
