[package]
name = "lnotebook"
version = "0.1.8"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Nnenty/lnotebook"
description = "asynchronous API to creating notebooks that stores notes in a database"

[dependencies]
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres" ] }
tokio = { version = "1.38", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] } 
anyhow = "1.0"
structopt = "0.3"
thiserror = "1.0"