[package]
name = "notebook_example"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tokio = { version = "1.38", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] } 
anyhow = "1.0"
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres" ] }
notebook_api = { path = "../notebook_api"}