[package]
name = "notebook_main"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Nnenty/notebook"
description = "Binary file to run notebook"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] } 
anyhow = "1.0"
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres" ] }
notebook_api = { path = "../notebook_api"}